caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_for_keyword.caffeine
Blueprints "SLO"
  * "test":
    Requires { env: String }
    Provides { value: "x" }
